@@ -2,6 +2,15 @@
 
 	reviewed by: Benjamin Otte  <otte@gnome.org>
 
+	* daemon/gvfsbackendftp.c: (ftp_connection_parse_features):
+	Be less strict in leading spaces of FEAT reply.
+	Researched by Oliver Joos. Apparently common, one affected ftp server
+	visible in bug #556809.
+
+2008-11-17  Andreas Henriksson <andreas@fatal.se>
+
+	reviewed by: Benjamin Otte  <otte@gnome.org>
+
 	* daemon/gvfsbackendftp.c: (ftp_connection_prepare),
 	(ftp_connection_use), (g_vfs_backend_ftp_pop_connection),
 	(do_mount):
